# arduinoCmake

./: CMakeLists.txt  README.md
cmake/: arduinoToolchain.cmake
cmake/Platform/: Arduino.cmake
examples/blink/: blink.cpp
